<resources>
    <string name="app_name">My3161</string>
    <string name="login_title">登录</string>
    <string name="names">学号:</string>
    <string name="passes">密码:</string>
    <string name="login_btn">登&#160;&#160;录</string>
    <string name="reset_pass">重置密码</string>
    <string name="reset_btn">重&#160;&#160;置</string>
    <string name="passok">确认密码:</string>
    <string name="QQ">QQ</string>
    <string name="WeiXin">微信</string>
    <string name="login">立即登录</string>
    <string name="first">欢迎!</string>
    <string name="passtips">请输入新密码</string>
    <string name="pass_ok">请确认密码</string>
    <string name="nameok">请输入学号</string>
</resources>
